完善后台登录代码 展示用户登录信息

--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/About.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/About.cshtml
@@ -20,11 +20,11 @@
     <div class="rows" style="margin-bottom: 1%; border: 1px solid #e6e6e6; overflow: hidden; padding-left: 1px;">
         <div class="panel panel-default">
             <div class="panel-heading">
-                NFine平台介绍
+                平台介绍
             </div>
             <div class="panel-body">
-                <p>使用时请务必保留来源，请勿用于违反我国法律的web平台、如诈骗等非法平台网站。版权最终解释权归《NFine团队》所有</p>
-                <p>NFine是一套基于ASP.NET MVC+EF6+Bootstrap开发出来的框架，源代码完全开源，可以帮助你解决C#.NET项目68%的重复工作，让开发人员远离加班！</p>
+                <p>使用时请务必保留来源，请勿用于违反我国法律的web平台、如诈骗等非法平台网站。版权最终解释权归《团队》所有</p>
+                <p>是一套基于ASP.NET MVC+EF6+Bootstrap开发出来的框架，源代码完全开源，可以帮助你解决C#.NET项目68%的重复工作，让开发人员远离加班！</p>
                 <p>使用 Apache License 2.0 协议，采用主流框架，容易上手，简单易学，学习成本低。可完全实现二次开发、基本满足80%项目需求。</p>
                 <p>可以帮助解决.NET项目70%的重复工作，让开发更多关注业务逻辑。既能快速提高开发效率，帮助公司节省人力成本，同时又不失灵活性。</p>
                 <p>支持SQLServer、MySQL、Oracle、SQLite、Access 等多数据库类型。模块化设计，层次结构清晰。内置一系列企业信息管理的基础功能。</p>
@@ -38,7 +38,7 @@
     <div class="rows" style="margin-bottom: 1%; border: 1px solid #e6e6e6; overflow: hidden; padding-left: 1px;">
         <div class="panel panel-default">
             <div class="panel-heading">
-                NFine技术介绍
+                技术介绍
             </div>
             <div class="panel-body" style="overflow: hidden;">
                 <div style="float: left; width: 50%;">
@@ -83,9 +83,9 @@
                 </p>
                 <p>
                     向我提问：欢迎向我提问，由于个人精力有限，并不是每一个问题都会去回答；邮箱地址：
-                    <a href="#">NFine_2016@163.com</a>
+                    <a href="#">_2016@163.com</a>
                 </p>
-                <p>获取最新源代码：<a href="http://www.oschina.net/p/nfine" target="_blank">http://www.oschina.net/p/nfine</a>、作者QQ：2717247167、技术交流群：549652099</p>
+                <p>获取最新源代码：<a href="http://www.oschina.net/p/" target="_blank">http://www.oschina.net/p/</a>、作者QQ：2717247167、技术交流群：549652099</p>
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
         <div style="margin-bottom: 5px;">
             扫描二维码，添加我的微信号
         </div>
-        <img src="~/Content/img/weixin_nfine.png" style="width: 150px;" alt="微信号" />
+        <img src="~/Content/img/weixin_.png" style="width: 150px;" alt="微信号" />
     </div>
     <div class="contentpay">
         <div class="hide_box"></div>
