--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/Index.cshtml
@@ -1,25 +1,25 @@
 ﻿<!DOCTYPE html>
 <html style="overflow: hidden;">
 <head>
-    <title>NFine快速开发平台</title>
-    <link href="~/Content/css/framework-font.css" rel="stylesheet" />
-    <script src="~/Content/js/jquery/jquery-2.1.1.min.js"></script>
-    <script src="~/Content/js/bootstrap/bootstrap.js"></script>
-    <link href="~/Content/js/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/Content/js/dialog/dialog.js"></script>
-    <script src="~/Content/js/cookie/jquery.cookie.js"></script>
-    <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
-    <script src="~/Content/js/framework-ui.js"></script>
-    <script src="~/Content/js/framework-clientdata.js"></script>
+    <title>SkyMallCore快速开发平台</title>
+    <link href="~/css/framework-font.css" rel="stylesheet" />
+    <script src="~/js/jquery/jquery-2.1.1.min.js"></script>
+    <script src="~/js/bootstrap/bootstrap.js"></script>
+    <link href="~/js/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/js/dialog/dialog.js"></script>
+    <script src="~/js/cookie/jquery.cookie.js"></script>
+    <link href="~/css/framework-theme.css" rel="stylesheet" />
+    <script src="~/js/framework-ui.js"></script>
+    <script src="~/js/framework-clientdata.js"></script>
 </head>
 <body style="overflow: hidden;">
     <div id="ajax-loader" style="cursor: progress; position: fixed; top: -50%; left: -50%; width: 200%; height: 200%; background: #fff; z-index: 10000; overflow: hidden;">
-        <img src="~/Content/img/ajax-loader.gif" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; margin: auto;" />
+        <img src="~/img/ajax-loader.gif" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; margin: auto;" />
     </div>
     <div id="theme-wrapper">
         <header class="navbar" id="header-navbar">
             <div class="container" style="padding-right: 0px;">
-                <a href="#" id="logo" class="navbar-brand">NFine开发平台</a>
+                <a href="#" id="logo" class="navbar-brand">SkyMallCore开发平台</a>
                 <div class="clearfix">
                     <div class="nav-no-collapse navbar-left pull-left hidden-sm hidden-xs">
                         <ul class="nav navbar-nav pull-left">
@@ -64,11 +64,11 @@
                             </li>
                             <li class="dropdown profile-dropdown">
                                 <a href="#" class="dropdown" data-toggle="dropdown">
-                                    <img src="~/Content/img/samples/scarlet-159.png" alt="" />
-                                    <span class="hidden-xs">@NFine.Code.OperatorProvider.Provider.GetCurrent().UserCode</span>
+                                    <img src="~/img/samples/scarlet-159.png" alt="" />
+                                    <span class="hidden-xs">@CoreProviderContext.Provider.CurrentSysUser.Account</span>
                                 </a>
                                 <ul class="dropdown-menu pull-right">
-                                    <li><a class="menuItem" data-id="userInfo" href="/SystemManage/User/Info"><i class="fa fa-user"></i>个人信息</a></li>
+                                    <li><a class="menuItem" data-id="userInfo" href="/SystemManage/Manager/Info"><i class="fa fa-user"></i>个人信息</a></li>
                                     <li><a href="javascript:void();"><i class="fa fa-inbox"></i>我的信箱</a></li>
                                     <li><a href="javascript:void();" onclick="layer.msg('浏览器缓存清除成功');"><i class="fa fa-trash-o"></i>清空缓存</a></li>
                                     <li><a href="javascript:void();"><i class="fa fa-paint-brush"></i>皮肤设置</a></li>
@@ -87,10 +87,10 @@
                     <section id="col-left" class="col-left-nano">
                         <div id="col-left-inner" class="col-left-nano-content">
                             <div id="user-left-box" class="clearfix hidden-sm hidden-xs dropdown profile2-dropdown">
-                                <img alt="" src="~/Content/img/samples/scarlet-159.png" />
+                                <img alt="" src="~/img/samples/scarlet-159.png" />
                                 <div class="user-box">
                                     <span class="name">
-                                        @NFine.Code.OperatorProvider.Provider.GetCurrent().UserCode;@NFine.Code.OperatorProvider.Provider.GetCurrent().UserName
+                                        @CoreProviderContext.Provider.CurrentSysUser.Account;@CoreProviderContext.Provider.CurrentSysUser.RealName
                                     </span>
                                     <span class="status">
                                         <i class="fa fa-circle"></i>在线
@@ -98,9 +98,7 @@
                                 </div>
                             </div>
                             <div class="collapse navbar-collapse navbar-ex1-collapse" id="sidebar-nav">
-                                <ul class="nav nav-pills nav-stacked">
-                                   
-                                </ul>
+                                <ul class="nav nav-pills nav-stacked"></ul>
                             </div>
                         </div>
                     </section>
@@ -134,8 +132,8 @@
                     </div>
                     <div class="content-iframe" style="background-color: #f9f9f9; overflow: hidden;">
                         <div class="mainContent" id="content-main" style="margin: 10px; margin-bottom: 0px; padding: 0;">
-                            <iframe class="NFine_iframe" width="100%" height="100%" src="/Home/Default" frameborder="0" data-id="/Home/Default"></iframe>
-                            <iframe class="NFine_iframe" width="100%" height="100%" src="/Home/About" frameborder="0" data-id="/Home/About"></iframe>
+                            <iframe class="_iframe" width="100%" height="100%" src="/SystemManage/Home/About" frameborder="0" data-id="/Home/Default"></iframe>
+                            <iframe class="_iframe" width="100%" height="100%" src="/SystemManage/Home/About" frameborder="0" data-id="/Home/About"></iframe>
                         </div>
                     </div>
                 </div>
@@ -146,15 +144,15 @@
         <div class="loading-shade"></div>
         <div class="loading-content" onclick="$.loading(false)">数据加载中，请稍后…</div>
     </div>
-    <script src="~/Content/js/index.js"></script>
-    <script src="~/Content/js/indextab.js"></script>
-<script src="~/Content/js/loading/pace.min.js"></script>
-        <script type="text/javascript">
+    <script src="~/js/index.js"></script>
+    <script src="~/js/indextab.js"></script>
+    <script src="~/js/loading/pace.min.js"></script>
+    <script type="text/javascript">
             $(function() {
                 @*$.get("@Url.Action("GetTreeSelectJson", "Module",new {area= "SystemManage" })", function (result) {
                     console.log(result)
                 });*@
             });
-        </script>
+    </script>
 </body>
 </html>
