--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Login/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Login/Index.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFine快速开发平台</title>
+    <title>快速开发平台</title>
     
     <!--[if lte IE 8]>
         <div id="errorie"><div>您还在使用老掉牙的IE，正常使用系统前请升级您的浏览器到 IE8以上版本 <a target="_blank" href="http://windows.microsoft.com/zh-cn/internet-explorer/ie-8-worldwide-languages">点击升级</a>&nbsp;&nbsp;强烈建议您更改换浏览器：<a href="http://down.tech.sina.com.cn/content/40975.html" target="_blank">谷歌 Chrome</a></div></div>
@@ -19,21 +19,20 @@
 </head>
 <body>
     <div style="position: absolute; z-index: 999; top: 20px; left: 20px; color: #fff; font-size: 13px; line-height: 22px;">
-        用户名 admin 或 guest，密码 0000，
     </div>
     <div class="wrapper">
         <div class="container">
             <div class="logo">
                 <i class="fa fa-modx"></i>
-                <h1><span>NFine</span>快速开发平台</h1>
+                <h1><span></span>快速开发平台</h1>
             </div>
             <form class="form">
                 <div class="row">
-                    <input id="txt_account" type="text" placeholder="用户名/手机号/邮箱">
+                    <input id="txt_account" type="text" placeholder="用户名/手机号/邮箱" value="admin">
                     <i class="fa fa-user"></i>
                 </div>
                 <div class="row">
-                    <input id="txt_password" type="password" placeholder="登录密码">
+                    <input id="txt_password" type="password" placeholder="登录密码" value="0000">
                     <i class="fa fa-key"></i>
                 </div>
                 <div class="row">
@@ -65,7 +64,7 @@
         </ul>
     </div>
     <div class="copyright">
-        <a href="#" style="text-decoration:none;color:#fff;">NFine开发团队出品</a>
+        <a href="#" style="text-decoration:none;color:#fff;">开发团队出品</a>
         <br>
        适用浏览器：IE8以上、360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗.
     </div>
@@ -123,9 +122,9 @@
                         $(".container").css("margin-top", ($(window).height() - $(".container").height()) / 2 - 50);
                     });
                     $("#switchCode").click(function () {
-                        $("#imgcode").attr("src", "/Login/GetAuthCode?time=" + Math.random());
+                        $("#imgcode").attr("src", "/SystemManage/Login/GetAuthCode?time=" + Math.random());
                     });
-                    var login_error = top.$.cookie('nfine_login_error');
+                    var login_error = top.$.cookie('_login_error');
                     if (login_error != null) {
                         switch (login_error) {
                             case "overdue":
@@ -138,7 +137,7 @@
                                 $.login.formMessage("系统未知错误,请重新登录");
                                 break;
                         }
-                        top.$.cookie('nfine_login_error', '', { path: "/", expires: -1 });
+                        top.$.cookie('_login_error', '', { path: "/", expires: -1 });
                     }
                     $("#login_button").click(function () {
                         $.login.loginClick();
