--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Login/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Login/Index.cshtml
@@ -9,7 +9,7 @@
     <!--[if lte IE 8]>
         <div id="errorie"><div>您还在使用老掉牙的IE，正常使用系统前请升级您的浏览器到 IE8以上版本 <a target="_blank" href="http://windows.microsoft.com/zh-cn/internet-explorer/ie-8-worldwide-languages">点击升级</a>&nbsp;&nbsp;强烈建议您更改换浏览器：<a href="http://down.tech.sina.com.cn/content/40975.html" target="_blank">谷歌 Chrome</a></div></div>
     <![endif]-->
-    <environment include="Development">
+    <environment>
         <link href="~/css/framework-font.css" rel="stylesheet" />
         <link href="~/css/framework-login.css" rel="stylesheet" />
         <script src="~/js/jquery/jquery-2.1.1.min.js"></script>
