完善后台其他功能页面

--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/ModuleButton/CloneButton.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/ModuleButton/CloneButton.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "克隆按钮";
-    Layout = "~/Views/Shared/_Form.cshtml";
+    Layout = "~/Areas/SystemManage/Views/Shared/_Form.cshtml";
 }
 <script>
     var moduleId = $.request("moduleId");
