--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/ModuleButton/Details.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/ModuleButton/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Form.cshtml";
+    Layout = "~/Areas/SystemManage/Views/Shared/_Form.cshtml";
 }
 <script>
     var keyValue = $.request("keyValue");
