--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/SysOrganize/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/SysOrganize/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Index.cshtml";
+    Layout = "/Areas/SystemManage/Views/Shared/_Index.cshtml";
 }
 <script>
     $(function () {
