--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/About.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/About.cshtml
@@ -8,13 +8,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>平台介绍</title>
-    <link href="~/Content/css/framework-font.css" rel="stylesheet" />
-    <link href="~/Content/css/framework-ui.css" rel="stylesheet" />
-    <script src="~/Content/js/jquery/jquery-2.1.1.min.js"></script>
-    <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
-    <link href="~/Content/js/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
-    <link href="~/Content/css/framework-about.css" rel="stylesheet" />
+    <link href="~/css/framework-font.css" rel="stylesheet" />
+    <link href="~/css/framework-ui.css" rel="stylesheet" />
+    <script src="~/js/jquery/jquery-2.1.1.min.js"></script>
+    <link href="~/css/framework-theme.css" rel="stylesheet" />
+    <link href="~/js/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/framework-theme.css" rel="stylesheet" />
+    <link href="~/css/framework-about.css" rel="stylesheet" />
 </head>
 <body>
     <div class="rows" style="margin-bottom: 1%; border: 1px solid #e6e6e6; overflow: hidden; padding-left: 1px;">
@@ -93,30 +93,30 @@
         <div style="margin-bottom: 5px;">
             扫描二维码，添加我的微信号
         </div>
-        <img src="~/Content/img/weixin_.png" style="width: 150px;" alt="微信号" />
+        <img src="~/img/weixin_.png" style="width: 150px;" alt="微信号" />
     </div>
     <div class="contentpay">
         <div class="hide_box"></div>
         <div class="shang_box">
             <a class="shang_close" href="javascript:void(0)" onclick="dashangToggle()" title="关闭">
-                <img src="~/Content/img/button_pm_close.png" alt="取消" /></a>
+                <img src="~/img/button_pm_close.png" alt="取消" /></a>
             <div class="shang_tit">
                 <p>感谢您的支持，我会继续努力的!</p>
             </div>
             <div class="shang_payimg">
-                <img src="~/Content/img/weipayimg.png" alt="扫码支持" title="扫一扫" />
+                <img src="~/img/weipayimg.png" alt="扫码支持" title="扫一扫" />
             </div>
             <div class="pay_explain">扫码打赏，你说多少就多少</div>
             <div class="shang_payselect">
                 <div class="pay_item checked" data-id="weipay">
                     <span class="radiobox"></span>
                     <span class="pay_logo">
-                        <img src="~/Content/img/wechat.jpg" alt="微信" /></span>
+                        <img src="~/img/wechat.jpg" alt="微信" /></span>
                 </div>
                 <div class="pay_item" data-id="alipay">
                     <span class="radiobox"></span>
                     <span class="pay_logo">
-                        <img src="~/Content/img/alipay.jpg" alt="支付宝" /></span>
+                        <img src="~/img/alipay.jpg" alt="支付宝" /></span>
                 </div>
             </div>
             <div class="shang_info">
@@ -129,7 +129,7 @@
             $(".pay_item").click(function () {
                 $(this).addClass('checked').siblings('.pay_item').removeClass('checked');
                 var dataid = $(this).attr('data-id');
-                $(".shang_payimg img").attr("src", "/Content/img/" + dataid + "img.png");
+                $(".shang_payimg img").attr("src", "/img/" + dataid + "img.png");
                 $("#shang_pay_txt").text(dataid == "alipay" ? "支付宝" : "微信");
             });
         });
