--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/Default.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/Home/Default.cshtml
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title></title>
-    <link href="~/Content/css/framework-font.css" rel="stylesheet" />
-    <link href="~/Content/css/framework-ui.css" rel="stylesheet" />
-    <script src="~/Content/js/jquery/jquery-2.1.1.min.js"></script>
-    <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
-    <link href="~/Content/js/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
-    <script src="~/Content/js/charts/Chart.js"></script>
+    <link href="~/css/framework-font.css" rel="stylesheet" />
+    <link href="~/css/framework-ui.css" rel="stylesheet" />
+    <script src="~/js/jquery/jquery-2.1.1.min.js"></script>
+    <link href="~/css/framework-theme.css" rel="stylesheet" />
+    <link href="~/js/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/framework-theme.css" rel="stylesheet" />
+    <script src="~/js/charts/Chart.js"></script>
     <script>
         $(function () {
             GetSalaryChart();
