--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/SysModule/Form.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemManage/Views/SysModule/Form.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Form";
-    Layout = "~/Views/Shared/_Form.cshtml";
+    Layout = "~/Areas/SystemManage/Views/Shared/_Form.cshtml";
 }
 <script>
     var keyValue = $.request("keyValue");
@@ -8,7 +8,7 @@
         initControl();
         if (!!keyValue) {
             $.ajax({
-                url: "/SystemManage/Module/GetFormJson",
+                url: "/SystemManage/SysModule/GetFormJson",
                 data: { keyValue: keyValue },
                 dataType: "json",
                 async: false,
@@ -23,7 +23,7 @@
             minimumResultsForSearch: -1
         });
         $("#ParentId").bindSelect({
-            url: "/SystemManage/Module/GetTreeSelectJson",
+            url: "/SystemManage/SysModule/GetTreeSelectJson",
         });
     }
     function submitForm() {
@@ -31,7 +31,7 @@
             return false;
         }
         $.submitForm({
-            url: "/SystemManage/Module/SubmitForm?keyValue=" + keyValue,
+            url: "/SystemManage/SysModule/SubmitForm?keyValue=" + keyValue,
             param: $("#form1").formSerialize(),
             success: function () {
                 $.currentWindow().$("#gridList").resetSelection();
