--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/DbBackup/Form.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/DbBackup/Form.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Form";
-    Layout = "~/Views/Shared/_Form.cshtml";
+    Layout = "~/Areas/SystemManage/Views/Shared/_Form.cshtml";
 }
 <script>
     $(function () {
