--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/ServerMonitoring/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/ServerMonitoring/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Index.cshtml";
+    Layout = "~/Areas/SystemManage/Views/Shared/_Index.cshtml";
 }
 @*<script src="~/Content/js/echarts/echarts.js"></script>*@
 <script src="~/Content/js/echarts/echarts-all.js"></script>
