--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/ServerMonitoring/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/ServerMonitoring/Index.cshtml
@@ -3,9 +3,9 @@
     Layout = "~/Areas/SystemManage/Views/Shared/_Index.cshtml";
 }
 @*<script src="~/Content/js/echarts/echarts.js"></script>*@
-<script src="~/Content/js/echarts/echarts-all.js"></script>
+<script src="~/js/echarts/echarts-all.js"></script>
 @*<script src="~/Content/js/echarts/echarts.min.js" type="text/javascript"></script>*@
-<script src="~/Content/js/echarts/infographic.js"></script>
+<script src="~/js/echarts/infographic.js"></script>
 <script>
     $(function () {
         loadGaugeIIS();
