--- a/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/DbBackup/Form.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Areas/SystemSecurity/Views/DbBackup/Form.cshtml
@@ -42,7 +42,7 @@
             <tr>
                 <th class="formTitle">备份名称</th>
                 <td class="formValue">
-                    <input id="FileName" name="FileName" type="text" class="form-control required"  value="@NFine.Code.Common.CreateNo()" placeholder="请输入备份名称" />
+                    @*todo<input id="FileName" name="FileName" type="text" class="form-control required"  value="@NFine.Code.Common.CreateNo()" placeholder="请输入备份名称" />*@
                 </td>
             </tr>
             <tr>
