--- a/SkyMallCore/SkyMallCoreWeb/Views/Home/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Views/Home/Index.cshtml
@@ -4,14 +4,14 @@
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <h2>欢迎使用快速开发平台首页</h2>
-
-    <a href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=mm9wkb4b" target="_blank">
-        <img src="~/img/aliyun.png" />
-    </a>
-    <br />
     dotNetCore应用交流:786465471
     <br />
     ==> <a href="/SystemManage/Login" target="_blank">进入后台管理</a>
+    <br /> <br /> <br />
+    <a style="padding-top" href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=mm9wkb4b" target="_blank">
+        <img src="~/img/aliyun.png" />
+    </a>
+
 </div>
 
 
