--- a/SkyMallCore/SkyMallCoreWeb/Views/Home/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "飞天博客首页";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
