--- a/SkyMallCore/SkyMallCoreWeb/Views/Article/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Views/Article/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewData["Title"] = "博客首页";
+﻿@model PagedList<ArticleDetailView>
+@{
+    ViewData["Title"] = "文章列表";
 }
 <!DOCTYPE html>
 <html>
@@ -7,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>快速开发平台</title>
+    <title>@ViewData["Title"] </title>
 
     <!--[if lte IE 8]>
         <div id="errorie"><div>您还在使用老掉牙的IE，正常使用系统前请升级您的浏览器到 IE8以上版本 <a target="_blank" href="http://windows.microsoft.com/zh-cn/internet-explorer/ie-8-worldwide-languages">点击升级</a>&nbsp;&nbsp;强烈建议您更改换浏览器：<a href="http://down.tech.sina.com.cn/40975.html" target="_blank">谷歌 Chrome</a></div></div>
@@ -19,14 +20,12 @@
 </head>
 <body>
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <h2>欢迎使用快速开发平台首页</h2>
-        dotNetCore应用交流:786465471
-        <br />
-        ==> <a href="/SystemManage/Login" target="_blank">进入后台管理</a>
-        <br /> <br /> <br />
-        <a style="padding-top" href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=mm9wkb4b" target="_blank">
-            <img src="~/img/aliyun.png" />
-        </a>
+      <div>
+          @foreach (var item in Model)
+          { 
+            <a href="@Url.Action("Article","Index",new {pid=item.Keyword })"> @item.Title</a>   
+          }
+      </div>
     </div>
 </body>
 </html>
