--- a/SkyMallCore/SkyMallCoreWeb/Views/_ViewImports.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using SkyMallCoreWeb
-@using SkyMallCoreWeb.Models
+@using SkyMallCore.ViewModel
+@using SkyMallCore.ViewModel.Business
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
