--- a/SkyMallCore/SkyMallCoreWeb/Views/Article/Index.cshtml
+++ b/SkyMallCore/SkyMallCoreWeb/Views/Article/Index.cshtml
@@ -2,31 +2,13 @@
 @{
     ViewData["Title"] = "文章列表";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"] </title>
-
-    <!--[if lte IE 8]>
-        <div id="errorie"><div>您还在使用老掉牙的IE，正常使用系统前请升级您的浏览器到 IE8以上版本 <a target="_blank" href="http://windows.microsoft.com/zh-cn/internet-explorer/ie-8-worldwide-languages">点击升级</a>&nbsp;&nbsp;强烈建议您更改换浏览器：<a href="http://down.tech.sina.com.cn/40975.html" target="_blank">谷歌 Chrome</a></div></div>
-    <![endif]-->
-    <environment>
-        <link href="~/css/framework-font.css" rel="stylesheet" />
-        <link href="~/css/framework-login.css" rel="stylesheet" />
-    </environment>
-</head>
-<body>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-      <div>
-          @foreach (var item in Model)
-          { 
-            <a href="@Url.Action("Article","Index",new {pid=item.Keyword })"> @item.Title</a>   
-          }
-      </div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+    <div>
+        @foreach (var item in Model)
+        {
+            <a href="@Url.Action("Article","Index",new {pid=item.Keyword })"> @item.Title</a>
+        }
     </div>
-</body>
-</html>
+    @Html.Partial("~/Views/Shared/PagerPartial.cshtml", Model)
+</div>
 
