--- a/SkyNetCore/SkyNetCore.Web/Views/Home/Index.cshtml
+++ b/SkyNetCore/SkyNetCore.Web/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -92,3 +91,11 @@
         </ul>
     </div>
 </div>
+@section Scripts
+{
+<script type="text/javascript">
+    $.post("/home/PostData", {}, function (data) {
+        console.log(data);
+    });
+</script>
+}
