--- a/SkyNetCore/SkyNetCore.Web/Views/Home/Index.cshtml
+++ b/SkyNetCore/SkyNetCore.Web/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
+
+
+
 <div id="output"></div>
 
 @section Scripts
@@ -45,7 +49,7 @@
         doConnect();
     }
 
-    window.onload = onInit;
+    //window.onload = onInit;
 
 </script>
 }
