用JWT来创建Token 保护我们的ASP.NET Core Web API

--- a/SkyNetCore/SkyNetCore.Web/Views/Home/Index.cshtml
+++ b/SkyNetCore/SkyNetCore.Web/Views/Home/Index.cshtml
@@ -51,5 +51,12 @@
 
     //window.onload = onInit;
 
+    $.post("/auth/token", { username: "Member", password:"123"}, function (result) {
+        if (result) {
+            console.log(result);
+        }
+    }, "json");
+
+
 </script>
 }
