调整公用类库

--- a/SkyMallCoreNew/SkyMallCoreWeb/Views/_ViewImports.cshtml
+++ b/SkyMallCoreNew/SkyMallCoreWeb/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using SkyMallCoreWeb
 @using SkyMallCore.ViewModel
-@using SkyMallCore.Core
+@using SkyCoreLib.Utils
 @using SkyCore.GlobalProvider
 @using SkyMallCore.ViewModel.Business
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
